@@ -1,3 +1,8 @@
+2007-03-26  Ian Lance Taylor  <iant@google.com>
+
+	PR tree-optimization/31345
+	* gcc.c-torture/compile/pr31345-1.c: New test.
+
 2007-03-22  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/30863
