@@ -1,3 +1,9 @@
+2007-03-26  Ian Lance Taylor  <iant@google.com>
+
+	PR tree-optimization/31345
+	* tree-vrp.c (extract_range_from_binary_expr): Turn ranges like
+	[+INF, +INF(OVF)] into VARYING.
+
 2007-03-23  Martin Michlmayr  <tbm@cyrius.com>
 
 	* doc/invoke.texi (-fforce-mem): Update documentation to reflect
